--- a/css/style.css
+++ b/css/style.css
@@ -2,23 +2,24 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+
 .search-field {
-  border: none;
-  border-radius: 50px;
+  /* border: 1px solid burlywood; */
+  border-radius: 10px;
   padding: 5px;
   outline: none;
 }
 .search-field:hover {
   outline: none;
-  border: none;
+  /* border: none; */
 }
 .search-box {
-  border: 1px solid rgb(3, 118, 211);
+  /* border: 1px solid rgb(3, 118, 211); */
   width: 281px;
   border-radius: 5px;
   margin: auto;
   margin-top: 50px;
-  border-right: none;
+  /* border-right: none; */
 }
 .search-button {
   padding: 10px 50px;
